--- a/project.html
+++ b/project.html
@@ -1,29 +1,53 @@
 <html>
-    <head>
-        <title>Alex's Porfolio</title>
-        <link rel="icon" type="image/x-icon" href="./A.ico.png">
-        <link rel="stylesheet" href="./proj.css">
-    </head>
-    <body>
-        <div class="header">
-            <button class="button">
-                <a href="./project.html" style="text-decoration: none;">Home Page</a>
-            </button>
-            <button class="button">Projects</button>
-            <button class="button">Blogs</button>
-            <button class="button">Contact</button>
-        </div>
-        <h1 class="main">
-            <nav>
-                <p style="padding-top: 10px;">👋 Hi, I'm Alex Nguyen</p>
-                <ul class="a">
-                    <li style="color: black;font-size: 20px;text-align: left;padding-top: 15px;">I'm a junior frontend developer with a passion for creating beautiful and functional websites. I recently started my journey into web development and have been learning HTML, CSS, JavaScript, and SvelteKit.</li>
-                    <li style="color: black;font-size: 20px;text-align: left;padding-top: 15px;">I love turning ideas into reality through code, and I’m excited to continue growing as a developer. When I’m not coding, you can find me playing video games 🎮, reading tech blogs 📚, or exploring new coffee shops ☕ in Ho Chi Minh City.</li>    
-                </ul>
-            </nav>
-            <nav style="padding-left: 150px;padding-top: 25px;">
-                <img src="./A.jpg" alt="Alex">
-            </nav>
-        </h1>
-    </body>
+  <head>
+    <title>Alex's Porfolio</title>
+    <link rel="icon" type="image/x-icon" href="./A.ico.png" />
+    <link rel="stylesheet" href="./proj.css" />
+  </head>
+  <body>
+    <div class="header">
+      <button class="button">
+        <a href="./project.html" style="text-decoration: none">Home Page</a>
+      </button>
+      <button class="button">Projects</button>
+      <button class="button">Blogs</button>
+      <button class="button">Contact</button>
+    </div>
+    <h1 class="main">
+      <nav>
+        <p style="padding-top: 10px">👋 Hi, I'm Alex Nguyen</p>
+        <ul class="a">
+          <li
+            style="
+              color: black;
+              font-size: 20px;
+              text-align: left;
+              padding-top: 15px;
+            "
+          >
+            I'm a junior frontend developer with a passion for creating
+            beautiful and functional websites. I recently started my journey
+            into web development and have been learning HTML, CSS, JavaScript,
+            and SvelteKit.
+          </li>
+          <li
+            style="
+              color: black;
+              font-size: 20px;
+              text-align: left;
+              padding-top: 15px;
+            "
+          >
+            I love turning ideas into reality through code, and I’m excited to
+            continue growing as a developer. When I’m not coding, you can find
+            me playing video games 🎮, reading tech blogs 📚, or exploring new
+            coffee shops ☕ in Ho Chi Minh City.
+          </li>
+        </ul>
+      </nav>
+      <nav style="padding-left: 150px; padding-top: 25px">
+        <img src="./A.jpg" alt="Alex" />
+      </nav>
+    </h1>
+  </body>
 </html>
