Improvate the page layout, look and feel

--- a/project.html
+++ b/project.html
@@ -4,48 +4,38 @@
     <link rel="icon" type="image/x-icon" href="./A.ico.png" />
     <link rel="stylesheet" href="./proj.css" />
   </head>
+
   <body>
-    <div class="header">
-      <a href="./project.html" style="text-decoration: none">Home Page</a>
-      <a href="#" style="text-decoration: none" class="button">Projects</a>
-      <a href="#" style="text-decoration: none" class="button">Blogs</a>
-      <a href="#" style="text-decoration: none" class="button">Contact</a>
-    </div>
-    <h1 class="main">
-      <nav>
-        <p style="padding-top: 10px">👋 Hi, I'm Alex Nguyen</p>
-        <ul class="a">
-          <li
-            style="
-              color: black;
-              font-size: 20px;
-              text-align: left;
-              padding-top: 15px;
-            "
-          >
+    <nav class="header">
+      <a href="./project.html" class="btn"> Home Page </a>
+      <a href="#" class="btn">Projects</a>
+      <a href="#" class="btn">Blogs</a>
+      <a href="#" class="btn">Contact</a>
+    </nav>
+
+    <div class="main">
+      <div>
+        <h1 class="title">👋 Hi, I'm Alex Nguyen</h1>
+
+        <ul class="intro">
+          <li>
             I'm a junior frontend developer with a passion for creating
             beautiful and functional websites. I recently started my journey
             into web development and have been learning HTML, CSS, JavaScript,
             and SvelteKit.
           </li>
-          <li
-            style="
-              color: black;
-              font-size: 20px;
-              text-align: left;
-              padding-top: 15px;
-            "
-          >
+          <li>
             I love turning ideas into reality through code, and I’m excited to
             continue growing as a developer. When I’m not coding, you can find
             me playing video games 🎮, reading tech blogs 📚, or exploring new
             coffee shops ☕ in Ho Chi Minh City.
           </li>
         </ul>
-      </nav>
-      <nav style="padding-left: 150px; padding-top: 25px">
+      </div>
+
+      <div class="pl-sm">
         <img src="./A.jpg" alt="Alex" />
-      </nav>
-    </h1>
+      </div>
+    </div>
   </body>
 </html>
