Leason about layout

--- a/index.html
+++ b/index.html
@@ -6,31 +6,31 @@
   </head>
 
   <body>
-    <nav class="header">
+    <nav class="header card">
       <a href="./project.html" class="btn"> Home Page </a>
       <a href="#" class="btn">Projects</a>
       <a href="#" class="btn">Blogs</a>
       <a href="#" class="btn">Contact</a>
     </nav>
 
-    <div class="main">
+    <div class="main card">
       <div>
         <h1 class="title">👋 Hi, I'm Alex Nguyen</h1>
 
-        <ul class="intro">
-          <li>
+        <div class="intro">
+          <p>
             I'm a junior frontend developer with a passion for creating
             beautiful and functional websites. I recently started my journey
             into web development and have been learning HTML, CSS, JavaScript,
             and SvelteKit.
-          </li>
-          <li>
+          </p>
+          <p>
             I love turning ideas into reality through code, and I’m excited to
             continue growing as a developer. When I’m not coding, you can find
             me playing video games 🎮, reading tech blogs 📚, or exploring new
             coffee shops ☕ in Ho Chi Minh City.
-          </li>
-        </ul>
+          </p>
+        </div>
       </div>
 
       <div class="pl-sm">
