--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
+<!DOCTYPE html>
+</html>
 <html>
   <head>
     <title>Alex's Porfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./A.ico.png" />
     <link rel="stylesheet" href="./proj.css" />
   </head>
 
   <body>
     <nav class="header card">
-      <a href="./project.html" class="btn"> Home Page </a>
+      <a href="./index.html" class="btn"> Home Page </a>
       <a href="#" class="btn">Projects</a>
       <a href="#" class="btn">Blogs</a>
       <a href="#" class="btn">Contact</a>
