--- a/testlayout1.html
+++ b/testlayout1.html
@@ -4,126 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      .block {
-        display: block;
-      }
-      ..inline {
-        display: inline;
-      }
-      .bg-gray {
-        background-color: rgb(45, 45, 52);
-      }
-      .text-white {
-        color: white;
-      }
-      .flex {
-        display: flex;
-      }
-      .flex-col {
-        flex-direction: column;
-      }
-      .flex-row {
-        flex-direction: row;
-      }
-      .flex-row-reverse {
-        flex-direction: row-reverse;
-      }
-      .logo {
-        background-color: rgb(55, 55, 64);
-        color: white;
-        box-shadow: -5px 3px 11px 0px rgba(0, 0, 0, 0.28);
-        padding: 1.5rem;
-        margin: 0.2rem;
-        text-align: left;
-        border-radius: 0.4rem;
-        font-family: sans-serif;
-        width: 100%;
-        font-size: 30px;
-      }
-      .navi {
-        background-color: rgb(55, 55, 64);
-        color: white;
-        box-shadow: -5px 3px 11px 0px rgba(0, 0, 0, 0.28);
-        padding: 1rem;
-        margin: 0.2rem;
-        text-align: center;
-        border-radius: 0.4rem;
-        font-family: sans-serif;
-        width: 100%;
-      }
-      .header {
-        background-color: rgb(55, 55, 64);
-        color: white;
-        box-shadow: -5px 3px 11px 0px rgba(0, 0, 0, 0.28);
-        padding: 4rem;
-        margin: 0.2rem;
-        text-align: center;
-        border-radius: 0.4rem;
-        font-family: sans-serif;
-        width: 100%;
-      }
-      .side {
-        background-color: rgb(55, 55, 64);
-        color: white;
-        box-shadow: -5px 3px 11px 0px rgba(0, 0, 0, 0.28);
-        padding: 1rem;
-        padding-top: 20rem;
-        padding-bottom: 20rem;
-        margin-left: 0.1rem;
-        margin-top: 1rem;
-        margin-bottom: 1rem;
-        margin-right: 1rem;
-        text-align: center;
-        border-radius: 0.4rem;
-        font-family: sans-serif;
-        width: 20%;
-      }
-      .bo {
-        background-color: rgb(55, 55, 64);
-        color: white;
-        box-shadow: -5px 3px 11px 0px rgba(0, 0, 0, 0.28);
-        padding: 1rem;
-        padding-top: 20rem;
-        padding-bottom: 20rem;
-        margin-left: 1rem;
-        margin-top: 1rem;
-        margin-bottom: 1rem;
-        margin-right: 0.1rem;
-        text-align: center;
-        border-radius: 0.4rem;
-        font-family: sans-serif;
-        width: 80%;
-      }
-      .foot {
-        background-color: rgb(55, 55, 64);
-        color: white;
-        box-shadow: -5px 3px 11px 0px rgba(0, 0, 0, 0.28);
-        padding: 1rem;
-        margin: 0.2rem;
-        text-align: center;
-        border-radius: 0.4rem;
-        font-family: sans-serif;
-        width: 100%;
-      }
-    </style>
+    <link rel="stylesheet" href="./layout.css" />
   </head>
   <body>
-    <div class="flex">
-      <div class="logo">Logo</div>
-    </div>
-    <div class="flex">
-      <div class="navi">Navigation</div>
-    </div>
-    <div class="flex">
-      <div class="header">Header / Banner</div>
-    </div>
-    <div class="flex flex-row">
-      <div class="side">Side Bar</div>
-      <div class="bo">Body Area</div>
-    </div>
-    <div class="flex">
-      <div class="foot">Footer</div>
+    <div class="flex flex-col flexgap">
+      <div class="abc logo">Logo</div>
+      <div class="abc">Navigation</div>
+      <div class="abc">Header / Banner</div>
+      <div class="flex flex-row flexgap">
+        <div class="abc side height">Side Bar</div>
+        <div class="abc flexgrow">Body Area</div>
+      </div>
+      <div class="abc">Footer</div>
     </div>
   </body>
 </html>
