--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
     <title>Alex's Porfolio</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="./A.ico.png" />
     <link rel="stylesheet" href="./proj.css" />
   </head>
 
   <body>
     <nav class="header card">
       <a href="./index.html" class="btn"> Home Page </a>
-      <a href="#" class="btn">Projects</a>
-      <a href="#" class="btn">Blogs</a>
-      <a href="#" class="btn">Contact</a>
+      <a href="./projectspage.html" class="btn">Projects</a>
+      <a href="./blogpage.html" class="btn">Blogs</a>
+      <a href="./contactpage.html" class="btn">Contact</a>
     </nav>
 
-    <div class="main card">
+    <div class="main row card">
       <div>
         <h1 class="title">👋 Hi, I'm Alex Nguyen</h1>
 
@@ -38,7 +37,7 @@
       </div>
 
       <div class="pl-sm">
-        <img src="./A.jpg" alt="Alex" />
+        <img src="./img/A.jpg" alt="Alex" />
       </div>
     </div>
   </body>
