change homepage and add blogpage

--- a/blogpage.html
+++ b/blogpage.html
@@ -13,5 +13,34 @@
       <a href="./blogpage.html" class="btn">Blogs</a>
       <a href="./contactpage.html" class="btn">Contact</a>
     </nav>
+    <div class="col intro main card">
+      <p class="t1">✍️ 1. How I Started Learning Web Development</p>
+      <p>📅 Published: January 5, 2024</p>
+      <p>🔗 Read More: alexnguyen-blog.com/how-i-started</p>
+      <p>
+        📄 Summary: I share my journey into programming, starting from online
+        tutorials to building my first project. I talk about the resources that
+        helped me, the struggles I faced, and tips for beginners.
+      </p>
+    </div>
+    <div class="col intro main card">
+      <p class="t1">✍️ 2. HTML & CSS Basics: What Every Beginner Should Know</p>
+      <p>📅 Published: February 15, 2024</p>
+      <p>🔗 Read More: alexnguyen-blog.com/html-css-basics</p>
+      <p>
+        📄 Summary: This post covers the foundational concepts of HTML & CSS,
+        including semantic elements, layout techniques, and best practices for
+        writing clean code.
+      </p>
+    </div>
+    <div class="col intro main card">
+      <p class="t1">✍️ 3. My First JavaScript Project: A To-Do List App</p>
+      <p>📅 Published: March 3, 2024</p>
+      <p>🔗 Read More: alexnguyen-blog.com/todo-app</p>
+      <p>
+        📄 Summary: A breakdown of how I built a simple to-do list app, covering
+        JavaScript fundamentals, event listeners, and local storage.
+      </p>
+    </div>
   </body>
 </html>
