--- a/index.html
+++ b/index.html
@@ -15,27 +15,11 @@
       <a href="./blogpage.html" class="btn">Blogs</a>
       <a href="./contactpage.html" class="btn">Contact</a>
     </nav>
-
-    <div class="main row card">
-      <div>
-        <h1 class="title">👋 Hi, I'm Alex Nguyen</h1>
-
-        <div class="intro">
-          <p>
-            I'm a junior frontend developer with a passion for creating
-            beautiful and functional websites. I recently started my journey
-            into web development and have been learning HTML, CSS, JavaScript,
-            and SvelteKit.
-          </p>
-          <p>
-            I love turning ideas into reality through code, and I’m excited to
-            continue growing as a developer. When I’m not coding, you can find
-            me playing video games 🎮, reading tech blogs 📚, or exploring new
-            coffee shops ☕ in Ho Chi Minh City.
-          </p>
-        </div>
+    <div class="main row card image">
+      <div class="col">
+      <h1 class="title tit">👋 Hi, I'm Alex Nguyen</h1>
+      <a href="./aboutme.html" class="btn1 t1">About Me >>></a>
       </div>
-
       <div class="pl-sm">
         <img src="./img/A.jpg" alt="Alex" />
       </div>
