add information and contact

--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
   <body>
     <nav class="header card">
       <a href="./index.html" class="btn"> Home Page </a>
-      <a href="./projectspage.html" class="btn">Projects</a>
-      <a href="./blogpage.html" class="btn">Blogs</a>
-      <a href="./contactpage.html" class="btn">Contact</a>
+      <a href="./projectspage.html" class="btn"> Projects </a>
+      <a href="./blogpage.html" class="btn"> Blogs </a>
+      <a href="./contactpage.html" class="btn"> Contact </a>
     </nav>
     <div class="main row card image">
       <div class="col">
       <h1 class="title tit">👋 Hi, I'm Alex Nguyen</h1>
       <a href="./aboutme.html" class="btn1 t1">About Me >>></a>
+      <a href="./infor.html" class="btn1 t1">My Information >>></a>
       </div>
       <div class="pl-sm">
         <img src="./img/A.jpg" alt="Alex" />
