--- a/projectspage.html
+++ b/projectspage.html
@@ -9,9 +9,9 @@
   <body>
     <nav class="header card">
       <a href="./index.html" class="btn"> Home Page </a>
-      <a href="./projectspage.html" class="btn">Projects</a>
-      <a href="./blogpage.html" class="btn">Blogs</a>
-      <a href="./contactpage.html" class="btn">Contact</a>
+      <a href="./projectspage.html" class="btn"> Projects </a>
+      <a href="./blogpage.html" class="btn"> Blogs </a>
+      <a href="./contactpage.html" class="btn"> Contact </a>
     </nav>
     <div class="main col card">
       <div class="row image">
@@ -36,7 +36,7 @@
       <div class="row image">
         <div class="col">
           <h1 class="title">📌 To-Do List App</h1>
-          <div>
+          <div class="intro">
             <p>
               🔹 Description: A simple to-do app that helps users track their
               daily tasks.
@@ -55,7 +55,7 @@
       <div class="row image">
         <div class="col">
           <h1 class="title">📌 Blog Layout Project</h1>
-          <div>
+          <div class="intro">
             <p>
               🔹 Description: A responsive blog page that displays articles in a
               clean and structured layout.
