--- a/contactpage.html
+++ b/contactpage.html
@@ -9,9 +9,17 @@
   <body>
     <nav class="header card">
       <a href="./index.html" class="btn"> Home Page </a>
-      <a href="./projectspage.html" class="btn">Projects</a>
-      <a href="./blogpage.html" class="btn">Blogs</a>
-      <a href="./contactpage.html" class="btn">Contact</a>
+      <a href="./projectspage.html" class="btn"> Projects </a>
+      <a href="./blogpage.html" class="btn"> Blogs </a>
+      <a href="./contactpage.html" class="btn"> Contact </a>
     </nav>
+    <div class="main intro card">
+      <p>📧 Email: alex.nguyen@example.com</p>
+      <p>📍 Location: Ho Chi Minh City, Vietnam</p>
+      <p>
+        💬 I’m open to collaboration, freelance work, or just tech discussions!
+        Feel free to reach out.
+      </p>
+    </div>
   </body>
 </html>
